@@ -17,6 +17,8 @@ struct dname;
 struct region;
 struct zone;
 struct namedb;
+struct query;
+struct answer;
 
 /* 
  * Create the hashed name of the nsec3 record
@@ -39,5 +41,27 @@ void prehash(struct namedb* db, struct zone* zone);
 int nsec3_find_cover(struct namedb* db, struct zone* zone, 
 	const struct dname* hashname, struct domain** result);
 
+/*
+ * Routines used to add the correct nsec3 record to a query answer.
+ * cnames etc may have been followed, hence original name.
+ */
+/* add proof for wildcards that the name below the wildcard.parent
+ * does not exist 
+ */
+void nsec3_answer_wildcard(struct query *query, struct answer *answer,
+        struct domain *wildcard, struct namedb* db);
+/* add NSEC3 to provide domain name but not rrset exists,
+ * this could be a query for a DS or NSEC3 type
+ */
+void nsec3_answer_nodata(struct query *query, struct answer *answer, 
+	struct domain *original);
+/* add NSEC3 for a delegation (optout stuff)
+*/
+void nsec3_answer_delegation(struct query *query, struct answer *answer);
+/* authoritative answers.
+  *match==0 is an nxdomain. */
+void nsec3_answer_authoritative(struct domain** match, struct query *query, 
+	struct answer *answer, struct domain* closest_encloser, 
+	struct namedb* db);
 #endif /* NSEC3 */
 #endif /* NSEC3_H*/
