@@ -5,6 +5,10 @@
 	- prehash also calcs the nsec3_last domain*.
 	- dbaccess when reading in will set the rr_type.owner value.
 	- changed namedb_find_zone to domain_find_zone, log msgs.
+	- implemented logic from nsec draft 05-pre2 section 5.4.1 - 5.4.8.
+	  NSEC3 responses only happen for nsd compiled with --enable-nsec3
+	  and for zones where an NSEC3 with the SOA bit set exists.
+	- added prehash pointer to ds parent side cover for opt out.
 
 20 Apr 2006: Wouter
 	- Unittest of base 32 encoding. 
